# mafw-test-gui

./: AUTHORS  Makefile.am  configure.ac
data/: Makefile.am  mafw-test-gui.desktop  mafw-test-gui.glade  mafw-test-gui.ui
debian/: changelog  control  mafw-test-gui.links  postinst  postrm  rules
src/: Makefile.am  fullscreen.c  fullscreen.h  gui.c  gui.h  main.c  main.h  metadata-view.c  metadata-view.h  playlist-controls.c  playlist-controls.h  playlist-treeview.c  playlist-treeview.h  renderer-combo.c  renderer-combo.h  renderer-controls.c  renderer-controls.h  source-treeview.c  source-treeview.h
