#
# Makefile.am for MAFW Test GUI Application.
#
# Author: Visa Smolander <visa.smolander@nokia.com>
#
# Copyright (C) 2007, 2008, 2009 Nokia. All rights reserved.

SUBDIRS = src data

# Extra clean files so that maintainer-clean removes *everything*
MAINTAINERCLEANFILES = aclocal.m4 compile config.guess config.sub configure depcomp install-sh ltmain.sh Makefile.in missing mkinstalldirs config.h.in *-stamp

maintainer-clean-local:
	rm -rf po
