#
# Makefile.am for MAFW Test GUI Application.
#
# Author: Visa Smolander <visa.smolander@nokia.com>
#
# Copyright (C) 2007, 2008, 2009 Nokia. All rights reserved.

shareddir = $(datadir)/mafw-test-gui
icondir = $(datadir)/icons/hicolor/26x26/hildon
icon_26x26dir = $(datadir)/icons/hicolor/26x26/hildon
icon_scalabledir = $(datadir)/icons/hicolor/scalable/hildon

icon_26x26_DATA = mafw-test-gui.png
icon_scalable_DATA = mafw-test-gui.png
dist_icon_DATA = mafw-test-gui.png

dist_shared_DATA = $(srcdir)/mafw-test-gui.ui

desktopdir = ${datadir}/applications/hildon
dist_desktop_DATA = mafw-test-gui.desktop

MAINTAINERCLEANFILES = Makefile.in
